#8 Creation Combo controller + service + openapi + fix issue boolean not parsed correctly for character <-> CharacterDto
